--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <HTML lang="en">
     <HEAD>
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>Number: {{number}} is {{even_or_odd}}</H1>
+        <H1>Number: {{number}} is {% if number is divisibleby(2) %}even{% else %}odd{% endif %}</H1>
     </BODY>
 </HTML>
